feat: enrich page-specific structured data
